syntax = "proto3";

package game;
option go_package = "./proto";

service GameService {
  rpc ShootBullet(ShootRequest) returns (ShootResponse);
  rpc GetUser(UserRequest) returns (UserResponse);
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
}

message ShootRequest {
  int64 user_id = 1;
  int64 cost = 2;
  int32 fish_id = 3;
}

message ShootResponse {
  bool captured = 1;
  int64 reward = 2;
  string error = 3;
}

message UserRequest {
  int64 user_id = 1;
}

message UserResponse {
  int64 id = 1;
  string username = 2;
  int64 balance = 3;
  string error = 4;
}

message CreateUserRequest {
  string username = 1;
  string password=2;
  int64 initial_balance = 3;
}

message CreateUserResponse {
  string  status = 1;
  string  error = 2;
}